--- a/src/com/polyjava/graphics/.gitignore
+++ b/src/com/polyjava/graphics/.gitignore
@@ -11,3 +11,48 @@
 /Main.class
 /MoveJFrame$FrameDragListener.class
 /MoveJFrame.class
+/Employee.class
+/Settings$1.class
+/Settings$2.class
+/Settings.class
+/Employee$1.class
+/Employee$10.class
+/Employee$11.class
+/Employee$2.class
+/Employee$3.class
+/Employee$4.class
+/Employee$5.class
+/Employee$6.class
+/Employee$7.class
+/Employee$8.class
+/Employee$9.class
+/JEmployee$1.class
+/JEmployee.class
+/AchatGraphics.class
+/Employee$12.class
+/Employee$13.class
+/JEmployee$2.class
+/ConsultEmp$1.class
+/ConsultEmp$2.class
+/ConsultEmp.class
+/AddEmp$1.class
+/AddEmp.class
+/AddModifEmp$1.class
+/AddModifEmp.class
+/ConsultCalendrier$1.class
+/ConsultCalendrier.class
+/ConsultCalendrier$2.class
+/AddModifPlanning$1.class
+/AddModifPlanning.class
+/JMain$1.class
+/JMain.class
+/Main$7.class
+/Main$8.class
+/AddModifEmp$2.class
+/ConsultCalendrier$3.class
+/ConsultCalendar$1.class
+/ConsultCalendar.class
+/ConsultCalendar$2.class
+/AddModifCalendar$1.class
+/AddModifCalendar.class
+/ConsultCalendar$3.class
