cleaning du code

--- a/src/com/polyjava/graphics/.gitignore
+++ b/src/com/polyjava/graphics/.gitignore
@@ -56,3 +56,15 @@
 /AddModifCalendar$1.class
 /AddModifCalendar.class
 /ConsultCalendar$3.class
+/TestBibliotheque.class
+/JFAQ$1.class
+/JFAQ.class
+/JGraphicMain$1.class
+/JGraphicMain$2.class
+/JGraphicMain$3.class
+/JGraphicMain$4.class
+/JGraphicMain$5.class
+/JGraphicMain$6.class
+/JGraphicMain$7.class
+/JGraphicMain$8.class
+/JGraphicMain.class
