--- a/src/com/polyjava/graphics/.gitignore
+++ b/src/com/polyjava/graphics/.gitignore
@@ -68,3 +68,33 @@
 /JGraphicMain$7.class
 /JGraphicMain$8.class
 /JGraphicMain.class
+/JGraphicMainClient$1.class
+/JGraphicMainClient.class
+/JGraphicMainServer$1.class
+/JGraphicMainServer$2.class
+/JGraphicMainServer$3.class
+/JGraphicMainServer$4.class
+/JGraphicMainServer$5.class
+/JGraphicMainServer$6.class
+/JGraphicMainServer$7.class
+/JGraphicMainServer$8.class
+/JGraphicMainServer.class
+/JGraphicMainClient$2.class
+/JGraphicMainClient$3.class
+/JGraphicMainClient$4.class
+/JGraphicMainClient$5.class
+/JGraphicMainClient$6.class
+/SettingsServer$1.class
+/SettingsServer.class
+/SettingsClient.class
+/SettingsClient$SettingsServer$1.class
+/SettingsClient$SettingsServer.class
+/SettingsClient$1.class
+/HistoricActivity$1.class
+/HistoricActivity.class
+/MainEMP$1.class
+/MainEMP.class
+/HistoricActivity$2.class
+/MainEMP$2.class
+/MainEMP$3.class
+/MainEMP$4.class
